staging/rallyetool-middleware-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: https
    namespace: rallyetool
spec:
    redirectScheme:
        scheme: https
        permanent: true
