staging/rallyetool-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rallyetool-svc
  labels:
    app: rallyetool
spec:
  type: ClusterIP
  selector:
    app: rallyetool
  ports:
    - name: mediafiles-srv
      port: 7000
      targetPort: 80
    - name: gunicorn
      port: 8000
      targetPort: 8000
