staging/rallyetool-ingress-http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: rallyetool-ingress-http
    labels:
        app: rallyetool
    namespace: rallyetool
spec:
    entryPoints:
        - web
    routes:
        - kind: Rule
          match: Host(`rallye.frank.elsinga.de`)
          services:
              - name: noop@internal
                kind: TraefikService
          middlewares:
              - name: https
